fix(style): mobile visibility improvements

--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -28,6 +28,15 @@
       color: $foreground-dim;
     }
   }
+
+  @media (max-width: 540px) {
+    display: block;
+
+    .float {
+      padding-left: 0;
+      margin-bottom: 0;
+    }
+  }
 }
 
 .links {
