--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -34,6 +34,10 @@
       color: $secondary;
     }
   }
+
+  @media (max-width: 865px) {
+    font-size: 15pt;
+  }
 }
 
 .menu {
